Experimental Poshi support (completion contributor)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -337,6 +337,11 @@
             language="Poshi"
             implementationClass="de.dm.intellij.liferay.language.poshi.commenter.PoshiCommenter"
         />
+
+        <completion.contributor
+            language="Poshi"
+            implementationClass="de.dm.intellij.liferay.language.poshi.completion.PoshiCompletionContributor"
+        />
     </extensions>
 
     <extensions defaultExtensionNs="org.jetbrains.idea.maven">
