Experimental Poshi support (add xpath support for Poshi path files)

--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,7 @@ intellij {
     pluginName.set('Liferay IntelliJ Plugin')
     plugins.set([
             'JavaScript', 'Tomcat', 'com.intellij.velocity', 'com.intellij.freemarker', 'maven', 'properties', 'java-i18n', 'com.intellij.css', 'sass', 'JavaEE', 'com.intellij.javaee.web', 'com.intellij.jsp', 'gradle',
-            'org.intellij.intelliLang', 'uml', 'java',
+            'org.intellij.intelliLang', 'uml', 'java', 'XPathView',
             //test only?
             'Groovy', 'junit', 'com.intellij.persistence', 'DatabaseTools'
     ])
