--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,11 +31,13 @@
             <li>Feature: Resolve configurationPid OSGi properties to configuration interface classes</li>
             <li>Feature: Add inspection to check if a Meta Configuration ID matches the full qualified classname of the interface</li>
             <li>Feature: Experimental Poshi support</li>
+            <li>Feature: Add Freemarker debugging support in Application Display Templates for the Similar Results portlet</li>
             <li>Change: Remove inspection about aui:fieldset must be inside an aui:fieldset-group (tag has been removed in Liferay lately)</li>
             <li>Change: Update support for IntelliJ 2022.3, dropped support for older versions</li>
             <li>Change: Disabled gradle importers for bundle-support and theme plugins (no longer working with Java 17)</li>
             <li>Bugfix: Setting Freemarker Breakpoint in Application Display Templates with filenames containing spaces did not work</li>
             <li>Bugfix: Execution of Liferay groovy scripts required Java 17 (now Java 11 is enough)</li>
+            <li>Bugfix: Freemarker debugging did not work ins some Application Display Templates due to API changes in newer Liferay versions
         </ul>
 
         <p>Version 0.0.14</p>
