--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,7 +37,8 @@
             <li>Change: Disabled gradle importers for bundle-support and theme plugins (no longer working with Java 17)</li>
             <li>Bugfix: Setting Freemarker Breakpoint in Application Display Templates with filenames containing spaces did not work</li>
             <li>Bugfix: Execution of Liferay groovy scripts required Java 17 (now Java 11 is enough)</li>
-            <li>Bugfix: Freemarker debugging did not work ins some Application Display Templates due to API changes in newer Liferay versions
+            <li>Bugfix: Freemarker debugging did not work ins some Application Display Templates due to API changes in newer Liferay versions</li>
+            <li>Bugfix: Implicit variables for Blog Application Display Templates in newer Liferay versions</li>
         </ul>
 
         <p>Version 0.0.14</p>
