--- a/.github/workflows/liferay-plugin-intellij.yml
+++ b/.github/workflows/liferay-plugin-intellij.yml
@@ -21,3 +21,8 @@ jobs:
         uses: gradle/gradle-build-action@v2
       - name: Run build with Gradle Wrapper
         run: ./gradlew build buildPlugin
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: build/distributions/
