--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
 
     <vendor email="Dominik.Marks@gmx.de" url="https://github.com/dmarks2">Dominik Marks</vendor>
 
-    <idea-version since-build="223" />
+    <idea-version since-build="231" />
 
     <description><![CDATA[
         <p>This plugin adds some features for developing Liferay modules. The following topics have been improved so far</p>
@@ -25,6 +25,10 @@
       ]]></description>
 
     <change-notes><![CDATA[
+        <p>Version 0.0.17</p>
+        <ul>
+            <li>Change: Update support for IntelliJ 2023.1, dropped support for older versions</li>
+        </ul>
         <p>Version 0.0.16</p>
         <ul>
             <li>Feature: Experimental Poshi support</li>
