--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,7 @@
     <change-notes><![CDATA[
         <p>Version 0.0.17</p>
         <ul>
+            <li>Feature: Code completion features for client-extensions.yaml</li>
             <li>Change: Update support for IntelliJ 2023.1, dropped support for older versions</li>
         </ul>
         <p>Version 0.0.16</p>
