--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,7 @@
         <p>Version 0.0.17</p>
         <ul>
             <li>Feature: Code completion features for client-extensions.yaml</li>
+            <li>Feature: Code completion features for rest-config.yaml</li>
             <li>Change: Update support for IntelliJ 2023.1, dropped support for older versions</li>
         </ul>
         <p>Version 0.0.16</p>
