--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,6 +29,7 @@
         <ul>
             <li>Feature: Code completion features for client-extensions.yaml</li>
             <li>Feature: Code completion features for rest-config.yaml</li>
+            <li>Feature: Code completion and references for JSP taglibs refering to javascript modules (e.g. react:component)</li>
             <li>Bugfix: Fix "Module already disposed" when unloading a module</li>
             <li>Change: Update support for IntelliJ 2023.1, dropped support for older versions</li>
         </ul>
