--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,7 +31,9 @@
             <li>Feature: Code completion features for rest-config.yaml</li>
             <li>Feature: Code completion and references for JSP taglibs refering to javascript modules (e.g. react:component)</li>
             <li>Bugfix: Fix "Module already disposed" when unloading a module</li>
+            <li>Bugfix: fix support for IntelliJ 2023.2</li>
             <li>Change: Update support for IntelliJ 2023.1, dropped support for older versions</li>
+            <li>Change: Update Poshi to 1.0.453</li>
         </ul>
         <p>Version 0.0.16</p>
         <ul>
