--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -34,6 +34,7 @@
             <li>Bugfix: fix support for IntelliJ 2023.2</li>
             <li>Change: Update support for IntelliJ 2023.1, dropped support for older versions</li>
             <li>Change: Update Poshi to 1.0.453</li>
+            <li>Change: Remove unsupported languages in workflow scripts (see LPS-187594)</li>
         </ul>
         <p>Version 0.0.16</p>
         <ul>
