Feature: add Liferay Java deprecation inspections

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -317,7 +317,8 @@
 
         <!-- inspections -->
         <inspectionToolProvider implementation="de.dm.intellij.liferay.language.osgi.ComponentInspectionToolProvider"/>
-        
+        <inspectionToolProvider implementation="de.dm.intellij.liferay.language.java.LiferayJavaInspectionToolProvider"/>
+
         <pluginReplacement implementation="de.dm.intellij.LiferayPluginReplacement" />
 
         <configurationType implementation="de.dm.intellij.liferay.language.groovy.LiferayServerGroovyConfigurationType"/>
