Feature: add in-depth validations of Poshi Scripts (using external Poshi Validation)

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ dependencies {
 //    implementation 'org.json:json:20171018'
 
     implementation 'com.liferay:com.liferay.poshi.runner.resources:1.0.17'
+    implementation 'com.liferay:com.liferay.poshi.core:1.0.132'
 
     poshiImplementation 'com.liferay:com.liferay.poshi.runner.resources:1.0.17'
     poshiImplementation('com.liferay:com.liferay.poshi.runner:1.0.453') {
