Feature: add in-depth validations of Poshi Scripts (add warnings support, fix validation of .path files)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -420,7 +420,14 @@
             name="Poshi Testcase"
         />
 
-        <externalAnnotator language="Poshi" implementationClass="de.dm.intellij.liferay.language.poshi.annotation.PoshiExternalAnnotator" />
+        <externalAnnotator
+                language="Poshi"
+                implementationClass="de.dm.intellij.liferay.language.poshi.annotation.PoshiExternalAnnotator"
+        />
+        <externalAnnotator
+                language="HTML"
+                implementationClass="de.dm.intellij.liferay.language.poshi.annotation.PoshiExternalAnnotator"
+        />
     </extensions>
 
     <extensions defaultExtensionNs="org.jetbrains.idea.maven">
