--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,10 @@
         <p>Version 0.0.18</p>
         <ul>
             <li>Feature: add freemarker taglib deprecation inspections</li>
+            <li>Feature: add java, jsp, groovy code deprecation inspections</li>
+            <li>Feature: add property file deprecation inspections</li>
+            <li>Feature: add changes from LPS-112464 (className changed to cssClass in Clay taglibs)</li>
+            <li>Feature: add in-depth validations of Poshi Scripts (using external Poshi Validation)</li>
         </ul>
 
         <p>Version 0.0.17</p>
